trunk/Archive2/5d/86f5df08ce8f77/output
main.cpp: In function 'int main()':
main.cpp:4:5: error: 'cont' is not a member of 'std'
     std::cont<<"enter two numbers:"<<std::endl;
     ^
main.cpp:7:5: error: expected ';' before 'std'
     std::cout<<"the sum of"<<v1<<v2<<"is"<<v1+v2<<std::endl;
     ^
